--- a/index.html
+++ b/index.html
@@ -382,68 +382,62 @@
           <div class="t-col t-col_12">
             <div class="t-section__topwrapper t-align_center">
               <div class="t-section__title t-title t-title_xs" field="btitle">Контакты</div>
-              <div class="t-section__descr t-descr t-descr_xl t-margin_auto" field="bdescr">Вы можете позвонить мне или
-                написать в социальные сети.</div>
-            </div>
-          </div>
-        </div>
-        <div class="t-container">
-          <div class="t-col t-col_12">
-            <div class="t718__contentbox" style="height:;">
-              <div class="t718__contentwrapper">
-                <div class="t718__contacts t-text t-descr_xxxl" style="" field="text">+7 (963)
-                  120-21-73<br />sasha_kino@bk.ru</div>
-                <div class="t-sociallinks">
-                  <div class="t-sociallinks__wrapper">
-                    <div class="t-sociallinks__item"> <a href="https://www.facebook.com/ShirmanovAleksandr"
-                        target="_blank"> <svg class="t-sociallinks__svg" version="1.1" id="Layer_1"
-                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                          width="30px" height="30px" viewBox="0 0 48 48" enable-background="new 0 0 48 48"
-                          xml:space="preserve">
-                          <desc>Facebook</desc>
-                          <path
-                            d="M47.761,24c0,13.121-10.638,23.76-23.758,23.76C10.877,47.76,0.239,37.121,0.239,24c0-13.124,10.638-23.76,23.764-23.76C37.123,0.24,47.761,10.876,47.761,24 M20.033,38.85H26.2V24.01h4.163l0.539-5.242H26.2v-3.083c0-1.156,0.769-1.427,1.308-1.427h3.318V9.168L26.258,9.15c-5.072,0-6.225,3.796-6.225,6.224v3.394H17.1v5.242h2.933V38.85z" />
-                        </svg> </a> </div>
-                    <div class="t-sociallinks__item"> <a href="https://vk.com/shirmanov_a" target="_blank"> <svg
-                          class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px"
-                          viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                          <desc>VK</desc>
-                          <path
-                            d="M47.761,24c0,13.121-10.639,23.76-23.76,23.76C10.878,47.76,0.239,37.121,0.239,24c0-13.123,10.639-23.76,23.762-23.76C37.122,0.24,47.761,10.877,47.761,24 M35.259,28.999c-2.621-2.433-2.271-2.041,0.89-6.25c1.923-2.562,2.696-4.126,2.45-4.796c-0.227-0.639-1.64-0.469-1.64-0.469l-4.71,0.029c0,0-0.351-0.048-0.609,0.106c-0.249,0.151-0.414,0.505-0.414,0.505s-0.742,1.982-1.734,3.669c-2.094,3.559-2.935,3.747-3.277,3.524c-0.796-0.516-0.597-2.068-0.597-3.171c0-3.449,0.522-4.887-1.02-5.259c-0.511-0.124-0.887-0.205-2.195-0.219c-1.678-0.016-3.101,0.007-3.904,0.398c-0.536,0.263-0.949,0.847-0.697,0.88c0.31,0.041,1.016,0.192,1.388,0.699c0.484,0.656,0.464,2.131,0.464,2.131s0.282,4.056-0.646,4.561c-0.632,0.347-1.503-0.36-3.37-3.588c-0.958-1.652-1.68-3.481-1.68-3.481s-0.14-0.344-0.392-0.527c-0.299-0.222-0.722-0.298-0.722-0.298l-4.469,0.018c0,0-0.674-0.003-0.919,0.289c-0.219,0.259-0.018,0.752-0.018,0.752s3.499,8.104,7.573,12.23c3.638,3.784,7.764,3.36,7.764,3.36h1.867c0,0,0.566,0.113,0.854-0.189c0.265-0.288,0.256-0.646,0.256-0.646s-0.034-2.512,1.129-2.883c1.15-0.36,2.624,2.429,4.188,3.497c1.182,0.812,2.079,0.633,2.079,0.633l4.181-0.056c0,0,2.186-0.136,1.149-1.858C38.281,32.451,37.763,31.321,35.259,28.999" />
-                        </svg> </a> </div>
-                    <div class="t-sociallinks__item"> <a href="https://vimeo.com/shirmanov" target="_blank"> <svg
-                          class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px"
-                          viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve">
-                          <desc>Vimeo</desc>
-                          <path
-                            d="M25 0.971008C38.267 0.971008 49.023 11.726 49.023 24.994C49.023 38.262 38.268 49.017 25 49.017C11.732 49.017 0.97699 38.262 0.97699 24.994C0.97699 11.726 11.733 0.971008 25 0.971008ZM12.738 20.117L13.734 21.423C13.734 21.423 15.788 19.804 16.473 20.613C17.158 21.423 19.772 31.197 20.644 33C21.405 34.581 23.506 36.672 25.81 35.179C28.112 33.686 35.769 27.149 37.139 19.43C38.508 11.713 27.926 13.33 26.804 20.053C29.606 18.371 31.101 20.736 29.667 23.415C28.236 26.091 26.928 27.836 26.243 27.836C25.56 27.836 25.034 26.045 24.251 22.916C23.441 19.68 23.447 13.852 20.081 14.513C16.91 15.136 12.738 20.117 12.738 20.117Z" />
-                        </svg> </a> </div>
-                    <div class="t-sociallinks__item"> <a href="https://www.instagram.com/alex_shirmanov/"
-                        target="_blank"> <svg class="t-sociallinks__svg" version="1.1" id="Layer_1"
-                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
-                          height="30px" viewBox="0 0 30 30" xml:space="preserve">
-                          <desc>Instagram</desc>
-                          <path
-                            d="M15,11.014 C12.801,11.014 11.015,12.797 11.015,15 C11.015,17.202 12.802,18.987 15,18.987 C17.199,18.987 18.987,17.202 18.987,15 C18.987,12.797 17.199,11.014 15,11.014 L15,11.014 Z M15,17.606 C13.556,17.606 12.393,16.439 12.393,15 C12.393,13.561 13.556,12.394 15,12.394 C16.429,12.394 17.607,13.561 17.607,15 C17.607,16.439 16.444,17.606 15,17.606 L15,17.606 Z">
-                          </path>
-                          <path
-                            d="M19.385,9.556 C18.872,9.556 18.465,9.964 18.465,10.477 C18.465,10.989 18.872,11.396 19.385,11.396 C19.898,11.396 20.306,10.989 20.306,10.477 C20.306,9.964 19.897,9.556 19.385,9.556 L19.385,9.556 Z">
-                          </path>
-                          <path
-                            d="M15.002,0.15 C6.798,0.15 0.149,6.797 0.149,15 C0.149,23.201 6.798,29.85 15.002,29.85 C23.201,29.85 29.852,23.202 29.852,15 C29.852,6.797 23.201,0.15 15.002,0.15 L15.002,0.15 Z M22.666,18.265 C22.666,20.688 20.687,22.666 18.25,22.666 L11.75,22.666 C9.312,22.666 7.333,20.687 7.333,18.28 L7.333,11.734 C7.333,9.312 9.311,7.334 11.75,7.334 L18.25,7.334 C20.688,7.334 22.666,9.312 22.666,11.734 L22.666,18.265 L22.666,18.265 Z">
-                          </path>
-                        </svg> </a> </div>
-                    <div class="t-sociallinks__item"> <a href="https://t.me/a_shirmanov" target="_blank"> <svg
-                          class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" viewBox="0 0 60 60"
-                          xml:space="preserve">
-                          <desc>Telegram</desc>
-                          <path
-                            d="M30 0C13.4 0 0 13.4 0 30s13.4 30 30 30 30-13.4 30-30S46.6 0 30 0zm16.9 13.9l-6.7 31.5c-.1.6-.8.9-1.4.6l-10.3-6.9-5.5 5.2c-.5.4-1.2.2-1.4-.4L18 32.7l-9.5-3.9c-.7-.3-.7-1.5 0-1.8l37.1-14.1c.7-.2 1.4.3 1.3 1z" />
-                          <path d="M22.7 40.6l.6-5.8 16.8-16.3-20.2 13.3" />
-                        </svg> </a> </div>
+              <div class="t718__contentbox" style="height:;">
+                <div class="t718__contentwrapper">
+                  <div class="t718__contacts t-text t-descr_xxxl t-align_center" style="" field="text">+7 (963)
+                    120-21-73<br />sasha_kino@bk.ru</div>
+                  <div class="t-sociallinks t-align_center">
+                    <div class="t-sociallinks__wrapper">
+                      <div class="t-sociallinks__item"> <a href="https://www.facebook.com/ShirmanovAleksandr"
+                          target="_blank"> <svg class="t-sociallinks__svg" version="1.1" id="Layer_1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            width="30px" height="30px" viewBox="0 0 48 48" enable-background="new 0 0 48 48"
+                            xml:space="preserve">
+                            <desc>Facebook</desc>
+                            <path
+                              d="M47.761,24c0,13.121-10.638,23.76-23.758,23.76C10.877,47.76,0.239,37.121,0.239,24c0-13.124,10.638-23.76,23.764-23.76C37.123,0.24,47.761,10.876,47.761,24 M20.033,38.85H26.2V24.01h4.163l0.539-5.242H26.2v-3.083c0-1.156,0.769-1.427,1.308-1.427h3.318V9.168L26.258,9.15c-5.072,0-6.225,3.796-6.225,6.224v3.394H17.1v5.242h2.933V38.85z" />
+                          </svg> </a> </div>
+                      <div class="t-sociallinks__item"> <a href="https://vk.com/shirmanov_a" target="_blank"> <svg
+                            class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px"
+                            viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                            <desc>VK</desc>
+                            <path
+                              d="M47.761,24c0,13.121-10.639,23.76-23.76,23.76C10.878,47.76,0.239,37.121,0.239,24c0-13.123,10.639-23.76,23.762-23.76C37.122,0.24,47.761,10.877,47.761,24 M35.259,28.999c-2.621-2.433-2.271-2.041,0.89-6.25c1.923-2.562,2.696-4.126,2.45-4.796c-0.227-0.639-1.64-0.469-1.64-0.469l-4.71,0.029c0,0-0.351-0.048-0.609,0.106c-0.249,0.151-0.414,0.505-0.414,0.505s-0.742,1.982-1.734,3.669c-2.094,3.559-2.935,3.747-3.277,3.524c-0.796-0.516-0.597-2.068-0.597-3.171c0-3.449,0.522-4.887-1.02-5.259c-0.511-0.124-0.887-0.205-2.195-0.219c-1.678-0.016-3.101,0.007-3.904,0.398c-0.536,0.263-0.949,0.847-0.697,0.88c0.31,0.041,1.016,0.192,1.388,0.699c0.484,0.656,0.464,2.131,0.464,2.131s0.282,4.056-0.646,4.561c-0.632,0.347-1.503-0.36-3.37-3.588c-0.958-1.652-1.68-3.481-1.68-3.481s-0.14-0.344-0.392-0.527c-0.299-0.222-0.722-0.298-0.722-0.298l-4.469,0.018c0,0-0.674-0.003-0.919,0.289c-0.219,0.259-0.018,0.752-0.018,0.752s3.499,8.104,7.573,12.23c3.638,3.784,7.764,3.36,7.764,3.36h1.867c0,0,0.566,0.113,0.854-0.189c0.265-0.288,0.256-0.646,0.256-0.646s-0.034-2.512,1.129-2.883c1.15-0.36,2.624,2.429,4.188,3.497c1.182,0.812,2.079,0.633,2.079,0.633l4.181-0.056c0,0,2.186-0.136,1.149-1.858C38.281,32.451,37.763,31.321,35.259,28.999" />
+                          </svg> </a> </div>
+                      <div class="t-sociallinks__item"> <a href="https://vimeo.com/shirmanov" target="_blank"> <svg
+                            class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px"
+                            viewBox="0 0 50 50" enable-background="new 0 0 50 50" xml:space="preserve">
+                            <desc>Vimeo</desc>
+                            <path
+                              d="M25 0.971008C38.267 0.971008 49.023 11.726 49.023 24.994C49.023 38.262 38.268 49.017 25 49.017C11.732 49.017 0.97699 38.262 0.97699 24.994C0.97699 11.726 11.733 0.971008 25 0.971008ZM12.738 20.117L13.734 21.423C13.734 21.423 15.788 19.804 16.473 20.613C17.158 21.423 19.772 31.197 20.644 33C21.405 34.581 23.506 36.672 25.81 35.179C28.112 33.686 35.769 27.149 37.139 19.43C38.508 11.713 27.926 13.33 26.804 20.053C29.606 18.371 31.101 20.736 29.667 23.415C28.236 26.091 26.928 27.836 26.243 27.836C25.56 27.836 25.034 26.045 24.251 22.916C23.441 19.68 23.447 13.852 20.081 14.513C16.91 15.136 12.738 20.117 12.738 20.117Z" />
+                          </svg> </a> </div>
+                      <div class="t-sociallinks__item"> <a href="https://www.instagram.com/alex_shirmanov/"
+                          target="_blank"> <svg class="t-sociallinks__svg" version="1.1" id="Layer_1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
+                            height="30px" viewBox="0 0 30 30" xml:space="preserve">
+                            <desc>Instagram</desc>
+                            <path
+                              d="M15,11.014 C12.801,11.014 11.015,12.797 11.015,15 C11.015,17.202 12.802,18.987 15,18.987 C17.199,18.987 18.987,17.202 18.987,15 C18.987,12.797 17.199,11.014 15,11.014 L15,11.014 Z M15,17.606 C13.556,17.606 12.393,16.439 12.393,15 C12.393,13.561 13.556,12.394 15,12.394 C16.429,12.394 17.607,13.561 17.607,15 C17.607,16.439 16.444,17.606 15,17.606 L15,17.606 Z">
+                            </path>
+                            <path
+                              d="M19.385,9.556 C18.872,9.556 18.465,9.964 18.465,10.477 C18.465,10.989 18.872,11.396 19.385,11.396 C19.898,11.396 20.306,10.989 20.306,10.477 C20.306,9.964 19.897,9.556 19.385,9.556 L19.385,9.556 Z">
+                            </path>
+                            <path
+                              d="M15.002,0.15 C6.798,0.15 0.149,6.797 0.149,15 C0.149,23.201 6.798,29.85 15.002,29.85 C23.201,29.85 29.852,23.202 29.852,15 C29.852,6.797 23.201,0.15 15.002,0.15 L15.002,0.15 Z M22.666,18.265 C22.666,20.688 20.687,22.666 18.25,22.666 L11.75,22.666 C9.312,22.666 7.333,20.687 7.333,18.28 L7.333,11.734 C7.333,9.312 9.311,7.334 11.75,7.334 L18.25,7.334 C20.688,7.334 22.666,9.312 22.666,11.734 L22.666,18.265 L22.666,18.265 Z">
+                            </path>
+                          </svg> </a> </div>
+                      <div class="t-sociallinks__item"> <a href="https://t.me/a_shirmanov" target="_blank"> <svg
+                            class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" viewBox="0 0 60 60"
+                            xml:space="preserve">
+                            <desc>Telegram</desc>
+                            <path
+                              d="M30 0C13.4 0 0 13.4 0 30s13.4 30 30 30 30-13.4 30-30S46.6 0 30 0zm16.9 13.9l-6.7 31.5c-.1.6-.8.9-1.4.6l-10.3-6.9-5.5 5.2c-.5.4-1.2.2-1.4-.4L18 32.7l-9.5-3.9c-.7-.3-.7-1.5 0-1.8l37.1-14.1c.7-.2 1.4.3 1.3 1z" />
+                            <path d="M22.7 40.6l.6-5.8 16.8-16.3-20.2 13.3" />
+                          </svg> </a> </div>
+                    </div>
                   </div>
                 </div>
               </div>
