Change inst link

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                             <path
                               d="M25 0.971008C38.267 0.971008 49.023 11.726 49.023 24.994C49.023 38.262 38.268 49.017 25 49.017C11.732 49.017 0.97699 38.262 0.97699 24.994C0.97699 11.726 11.733 0.971008 25 0.971008ZM12.738 20.117L13.734 21.423C13.734 21.423 15.788 19.804 16.473 20.613C17.158 21.423 19.772 31.197 20.644 33C21.405 34.581 23.506 36.672 25.81 35.179C28.112 33.686 35.769 27.149 37.139 19.43C38.508 11.713 27.926 13.33 26.804 20.053C29.606 18.371 31.101 20.736 29.667 23.415C28.236 26.091 26.928 27.836 26.243 27.836C25.56 27.836 25.034 26.045 24.251 22.916C23.441 19.68 23.447 13.852 20.081 14.513C16.91 15.136 12.738 20.117 12.738 20.117Z" />
                           </svg> </a> </div>
-                      <div class="t-sociallinks__item"> <a href="https://www.instagram.com/alex_shirmanov/"
+                      <div class="t-sociallinks__item"> <a href="https://www.instagram.com/aleks_shirmanov/"
                           target="_blank"> <svg class="t-sociallinks__svg" version="1.1" id="Layer_1"
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
                             height="30px" viewBox="0 0 30 30" xml:space="preserve">
@@ -512,7 +512,7 @@
               </div>
             </div>
             <div class="t452__col t452__col_mobile">
-              <div class="t452__typo t452__copyright t-name t-name_xs" field="text" style="color: #ffffff;"> © 2017
+              <div class="t452__typo t452__copyright t-name t-name_xs" field="text" style="color: #ffffff;"> © 2019
                 Александр Ширманов </div>
             </div>
             <div class="t452__col">
