--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--metatextblock-->
-  <title>Режиссер Александр Ширманов</title>
+  <title>Режиссер Саша Ширманов</title>
   <meta name="description" content="Сайт портфолио" />
   <meta property="og:url" content="http://a-shirmanov.ru" />
-  <meta property="og:title" content="Режиссер Александр Ширманов" />
+  <meta property="og:title" content="Режиссер Саша Ширманов" />
   <meta property="og:description" content="Сайт портфолио" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/tild6531-3666-4934-b739-333065306233__4w8a5434.jpg" />
@@ -101,7 +101,7 @@
             <div class="t-cover__wrapper t-valign_middle" style="height:100vh;">
               <div class="t001 t-align_center">
                 <div class="t001__wrapper" data-hook-content="covercontent">
-                  <div class="t001__title t-title t-title_xl" style="" field="title">Александр Ширманов</div>
+                  <div class="t001__title t-title t-title_xl" style="" field="title">Саша Ширманов</div>
                   <div class="t001__descr t-descr t-descr_xl t001__descr_center" style="" field="descr">Режиссер,
                     сценарист</div> <span class="space"></span>
                 </div>
@@ -186,13 +186,13 @@
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="336771943"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text">Заказчик: "Транстехсервис"<br />Режиссер -
-              Александр Ширманов<br />Оператор - Роман Колесов <br /></div>
+              Саша Ширманов<br />Оператор - Роман Колесов <br /></div>
           </div>
           <div class="t223-col t223-col_right t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="336770921"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text2">Заказчик: "Йола-маркет"<br />Режиссер -
-              Александр Ширманов<br />Оператор - Роман Колесов <br /><br /></div>
+              Саша Ширманов<br />Оператор - Роман Колесов <br /><br /></div>
           </div>
         </div>
       </div>
@@ -209,13 +209,13 @@
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="337090645"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text">Клиент: Татнефть<br />Продакшн: Зилант
-              медиа<br />Режиссер: Александр Ширманов<br />Оператор-постановщик: Юрий Данилов<br /><br /></div>
+              медиа<br />Режиссер: Саша Ширманов<br />Оператор-постановщик: Юрий Данилов<br /><br /></div>
           </div>
           <div class="t223-col t223-col_right t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="348530594"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text2">Клиент: ХК Ак Барс<br />Продакшн: Зилант
-              медиа<br />Режиссер: Александр Ширманов<br />Оператор-постановщик: Роман Колесов<br /><br /></div>
+              медиа<br />Режиссер: Саша Ширманов<br />Оператор-постановщик: Роман Колесов<br /><br /></div>
           </div>
         </div>
       </div>
@@ -233,14 +233,14 @@
               data-blocklazy-id="58387004" data-videolazy-load="false" data-videolazy-height="315"
               data-videolazy-two-id="1"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text">Продакшн: Нефть production<br />Режиссер,
-              сценарист: Александр Ширманов<br />Оператор: Константин Клюев</div>
+              сценарист: Саша Ширманов<br />Оператор: Константин Клюев</div>
           </div>
           <div class="t223-col t223-col_right t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="youtube" data-videolazy-id="gd7CHsJRg4U"
               data-blocklazy-id="58387004" data-videolazy-load="false" data-videolazy-height="315"
               data-videolazy-two-id="2"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text2">Продакшн: Нефть production<br />Клиент: Нефть
-              coffeeshop<br />Режиссер: Александр Ширманов<br />Креатив: Александр Ширманов, Роман
+              coffeeshop<br />Режиссер: Саша Ширманов<br />Креатив: Саша Ширманов, Роман
               Колесов<br />Оператор: Роман Колесов</div>
           </div>
         </div>
@@ -258,7 +258,7 @@
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="205690702"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text">Трейлер художественного фильма "На рассвете в
-              конце июня"<br />Продакшн: Spotmakers<br />Режиссер, сценарист: Александр
+              конце июня"<br />Продакшн: Spotmakers<br />Режиссер, сценарист: Саша
               Ширманов<br />Оператор-постановщик: Айдар Шарипов<br />Генеральный продюсер: Михаил Маризов</div>
           </div>
           <div class="t223-col t223-col_right t-col t-col_6">
@@ -281,13 +281,13 @@
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="205657773"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text">Клиент: Корд Оптика<br />Режиссер, сценарист:
-              Александр Ширманов<br />Оператор-постановщик: Айдар Шарипов<br /></div>
+              Саша Ширманов<br />Оператор-постановщик: Айдар Шарипов<br /></div>
           </div>
           <div class="t223-col t223-col_right t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="205657722"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text2">Клиент: Татнефтепродукт<br />Режиссер,
-              сценарист: Александр Ширманов<br />Оператор-постановщик: Алексей Матросов<br /><br /></div>
+              сценарист: Саша Ширманов<br />Оператор-постановщик: Алексей Матросов<br /><br /></div>
           </div>
         </div>
       </div>
@@ -413,7 +413,7 @@
                             <path
                               d="M25 0.971008C38.267 0.971008 49.023 11.726 49.023 24.994C49.023 38.262 38.268 49.017 25 49.017C11.732 49.017 0.97699 38.262 0.97699 24.994C0.97699 11.726 11.733 0.971008 25 0.971008ZM12.738 20.117L13.734 21.423C13.734 21.423 15.788 19.804 16.473 20.613C17.158 21.423 19.772 31.197 20.644 33C21.405 34.581 23.506 36.672 25.81 35.179C28.112 33.686 35.769 27.149 37.139 19.43C38.508 11.713 27.926 13.33 26.804 20.053C29.606 18.371 31.101 20.736 29.667 23.415C28.236 26.091 26.928 27.836 26.243 27.836C25.56 27.836 25.034 26.045 24.251 22.916C23.441 19.68 23.447 13.852 20.081 14.513C16.91 15.136 12.738 20.117 12.738 20.117Z" />
                           </svg> </a> </div>
-                      <div class="t-sociallinks__item"> <a href="https://www.instagram.com/aleks_shirmanov/"
+                      <div class="t-sociallinks__item"> <a href="https://www.instagram.com/shirmanov_sasha/"
                           target="_blank"> <svg class="t-sociallinks__svg" version="1.1" id="Layer_1"
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px"
                             height="30px" viewBox="0 0 30 30" xml:space="preserve">
@@ -455,7 +455,7 @@
           <div class="t452__content">
             <div class="t452__col t452__col_hiddenmobile">
               <div class="t452__typo t452__copyright t-name t-name_xs" field="text" style="color: #ffffff;"> © 2019
-                Александр Ширманов </div>
+                Саша Ширманов </div>
             </div>
             <div class="t452__col t452__col_center t-align_center">
               <div class="t452__right_social_links">
@@ -485,7 +485,7 @@
                         <path
                           d="M-431,256.971c13.267,0,24.023,10.755,24.023,24.023s-10.755,24.023-24.023,24.023s-24.023-10.755-24.023-24.023 S-444.267,256.971-431,256.971z M-443.262,276.117l0.996,1.306c0,0,2.054-1.619,2.739-0.81c0.685,0.81,3.299,10.584,4.171,12.387 c0.761,1.581,2.862,3.672,5.166,2.179c2.302-1.493,9.959-8.03,11.329-15.749c1.369-7.717-9.213-6.1-10.335,0.623 c2.802-1.682,4.297,0.683,2.863,3.362c-1.431,2.676-2.739,4.421-3.424,4.421c-0.683,0-1.209-1.791-1.992-4.92 c-0.81-3.236-0.804-9.064-4.17-8.403C-439.09,271.136-443.262,276.117-443.262,276.117L-443.262,276.117z" />
                       </svg> </a> </div>
-                  <div class="t452__right_social_links_item"> <a href="https://www.instagram.com/aleks_shirmanov/"
+                  <div class="t452__right_social_links_item"> <a href="https://www.instagram.com/shirmanov_sasha/"
                       target="_blank"> <svg style="fill:#ffffff;" width="30px" height="30px" viewBox="0 0 30 30"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <desc>Instagram</desc>
@@ -513,7 +513,7 @@
             </div>
             <div class="t452__col t452__col_mobile">
               <div class="t452__typo t452__copyright t-name t-name_xs" field="text" style="color: #ffffff;"> © 2019
-                Александр Ширманов </div>
+                Саша Ширманов </div>
             </div>
             <div class="t452__col">
               <div class="t452__scroll t-align_right"> <a class="t452__typo t-name t-name_xs t452_scrolltop"
