Use colon everywhere

--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
           <div class="t223-col t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="336771943"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
-            <div class="t223__blocktext t-text t-text_sm" field="text">Заказчик: "Транстехсервис"<br />Режиссер -
-              Саша Ширманов<br />Оператор - Роман Колесов <br /></div>
+            <div class="t223__blocktext t-text t-text_sm" field="text">Заказчик: "Транстехсервис"<br />Режиссер:
+              Саша Ширманов<br />Оператор: Роман Колесов <br /></div>
           </div>
           <div class="t223-col t223-col_right t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="336770921"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
-            <div class="t223__blocktext t-text t-text_sm" field="text2">Заказчик: "Йола-маркет"<br />Режиссер -
-              Саша Ширманов<br />Оператор - Роман Колесов <br /><br /></div>
+            <div class="t223__blocktext t-text t-text_sm" field="text2">Заказчик: "Йола-маркет"<br />Режиссер:
+              Саша Ширманов<br />Оператор: Роман Колесов <br /><br /></div>
           </div>
         </div>
       </div>
