Add new video to page

--- a/index.html
+++ b/index.html
@@ -177,26 +177,28 @@
         </div>
       </div>
     </div>
-    <div id="rec30198583" class="r t-rec t-rec_pt_45 t-rec_pb_60" style="padding-top:45px;padding-bottom:60px; "
+    <div id="rec1051574" class="r t-rec t-rec_pt_45 t-rec_pb_60" style="padding-top:45px;padding-bottom:60px; "
       data-record-type="378">
       <!-- T223 -->
       <div class="t223">
         <div class="t-container">
+          <div class="t223-col t223-col_right t-col t-col_6">
+            <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="472700957"
+              data-videolazy-load="false" data-videolazy-height="315"> </div>
+            <div class="t223__blocktext t-text t-text_sm" field="text2">Продакшн: Нефть production
+              <br />Режиссеры: Саша Ширманов, Никита Зубков<br />Креатив: Виктор Копаница
+              <br />Оператор-постановщик: Дима Герасимов<br /></div>
+          </div>
           <div class="t223-col t-col t-col_6">
             <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="393236677"
               data-videolazy-load="false" data-videolazy-height="315"> </div>
             <div class="t223__blocktext t-text t-text_sm" field="text">Продакшн: Zilant.pro
-              <br />Режиссер/креатив: Саша Ширманов<br />Оператор-постановщик: Дмитрий Герасимов</div>
-          </div>
-          <div class="t223-col t223-col_right t-col t-col_6">
-            <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="359884676"
-              data-videolazy-load="false" data-videolazy-height="315"> </div>
-            <div class="t223__blocktext t-text t-text_sm" field="text2">Шоурил 2019 год</div>
+              <br />Режиссер/креатив: Саша Ширманов<br />Оператор-постановщик: Дмитрий Герасимов<br /></div>
           </div>
         </div>
       </div>
       <script type="text/javascript">$(document).ready(function () {
-          var div = $("#rec30198583").find(".t-video-lazyload"); var iframe = div.find('iframe'); var height = div.width(); div.height(height); iframe.height(height); $('.t223').bind('displayChanged', function () { height = div.width(); div.height(height); iframe.height(height); }); $(window).bind('scroll', t_throttle(function () { height = div.width(); div.height(height); iframe.height(height); }, 200));
+          var div = $("#rec1051574").find(".t-video-lazyload"); var iframe = div.find('iframe'); var height = div.width() * 0.5625; div.height(height); iframe.height(height); $('.t223').bind('displayChanged', function () { height = div.width() * 0.5625; div.height(height); iframe.height(height); }); $(window).bind('scroll', t_throttle(function () { height = div.width() * 0.5625; div.height(height); iframe.height(height); }, 200));
         });</script>
     </div>
     <div id="rec105157618" class="r t-rec t-rec_pt_45 t-rec_pb_60" style="padding-top:45px;padding-bottom:60px; "
@@ -306,6 +308,11 @@
             <div class="t223__blocktext t-text t-text_sm" field="text">Клиент: Корд Оптика<br />Режиссер, сценарист:
               Саша Ширманов<br />Оператор-постановщик: Айдар Шарипов<br /></div>
           </div>
+          <div class="t223-col t223-col_right t-col t-col_6">
+            <div class="t-video-lazyload" data-videolazy-type="vimeo" data-videolazy-id="359884676"
+              data-videolazy-load="false" data-videolazy-height="315"> </div>
+            <div class="t223__blocktext t-text t-text_sm" field="text2">Шоурил 2019 год</div>
+          </div>
         </div>
       </div>
       <script type="text/javascript">$(document).ready(function () {
@@ -314,6 +321,7 @@
     </div>
     <div id="rec30272759" class="r t-rec" style=" " data-record-type="215"><a name="dover" style="font-size:0;"></a>
     </div>
+
     <div id="rec30272837" class="r t-rec" style=" " data-record-type="270">
       <div class="t270"></div>
       <script
